ADDED: SEO component for og and meta tags

--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,8 @@ typings/
 
 # gatsby files
 .cache/
-public
+/public/*
+!/public/config.yml
 
 # Mac files
 .DS_Store
@@ -67,3 +68,4 @@ yarn-error.log
 .pnp.js
 # Yarn Integrity file
 .yarn-integrity
+
