--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
     "gatsby-plugin-netlify-cms": "^7.12.1",
+    "gatsby-plugin-react-helmet": "^6.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.32",
     "gatsby-source-filesystem": "^5.14.0",
@@ -26,6 +27,7 @@
     "plyr-react": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-owl-carousel": "^2.3.3",
     "wowjs": "^1.1.3"
   },
