--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-owl-carousel": "^2.3.3",
+    "slugify": "^1.6.6",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
